This should fix it......

--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,5 @@
   "short_name": "VAS",
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#fff",
+  "background_color": "#fff"
 }
